# hft_engine

./: .gitignore  CMakeLists.txt  ENHANCED_FEATURES.md  FEATURE_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  RESUME_CLAIMS_VERIFICATION.md  RESUME_VALIDATION_REPORT.md  VERIFICATION_REPORT.md  benchmark_redis  benchmark_redis.cpp  build.sh  clean.sh  component_test  component_test.cpp  comprehensive_demo.cpp  config.json  demo.sh  engine.sh  example.py  final_demo  final_demo.cpp  github_setup.txt  hft_engine  hft_enhanced  hft_enhanced_example.cpp  main  main.cpp  main_final  main_new  main_optimized  main_ultra_optimized  market_data_loader.py  market_processor.py  network_example.cpp  orders.csv  push_complete_system.sh  pyproject.toml  real_data_demo.py  run_all_and_verify.sh  (+10 more)
archive/: .gitignore  CMakeLists.txt  Dockerfile  README.md
archive/.github/workflows/: qodana_code_quality.yml
archive/hft-build-backup/: hft_engine_backup_20250710_115605.bkpf  hft_engine_backup_20250710_145731.bkpf  hft_engine_backup_raw_20250710_093935.bkpf  hft_engine_backup_raw_20250710_094239.bkpf
archive/hft-complete-backup/: hft_engine_complete_backup_20250710_115557.bkpf
archive/merged_backup/include/hft/: auth_manager.h  command.h  types.h  ui_manager.h  websocket_client.h
archive/merged_backup/src/: auth_manager.cpp  main.cpp  matching_engine.cpp  order_book.cpp  ui_manager.cpp  websocket_client.cpp
archive/tests/: CMakeLists.txt  test_auth_manager.cpp  test_order_book.cpp  test_trading_client.cpp
archive/uml/: data_flow_diagram.mmd
archive/uml/logical/: composite_structure_diagram.mmd
archive/uml/physical/: deployment_diagram.mmd
archive/uml/process/: activity_diagram.mmd
archive/uml/scenarios/: use_case_diagram.mmd
archive/web/: README.md
archive/web/assets/css/: styles.css
archive/web/assets/js/: app.js
backup_original_redis/: redis_client.cpp  redis_client.hpp
docs/: ASYNC_LOGGER.md  config.txt.in
hft-build-backup/: hft_engine_backup_20250710_095151.bkpf
include/hft/: admission_control.h  advanced_metrics.h  auth_manager.h  bench_tsc.h  command.h  common.h  deep_profiler.h  epoch_manager.h  fix_parser.h  hot_order_view.h  index_pool.h  latency_controller.h  latency_metrics.h  lockfree_queue.h  logger.h  market_data_source.h  market_microstructure_sim.h  market_simulator.h  matching_engine.h  matching_engine_inl.h  matching_engine_types.h  memory_analyzer.h  micro_benchmark.h  network.h  order.h  order_book.h  order_node.h  platform.h  pnl_tracker.h  price_tracker.h  queue.h  queue_metrics.h  redis_benchmark.h  redis_cache.h  risk_manager.h  segment_tree.h  shard.h  simd_match.h  simd_optimizer.h  single_consumer_pool.h  (+12 more)
include/hft/analytics/: pnl_calculator.hpp
include/hft/backtesting/: tick_replay.hpp
include/hft/engine/: hft_engine.hpp
include/hft/fix/: fix_parser.hpp
include/hft/matching/: matching_engine.hpp
include/hft/order/: order.hpp  order_book.hpp  price_level.hpp
include/hft/strategies/: market_making.hpp
python/: __init__.py  hft_backtest.py  hft_python_bindings.py  simple_backtest.py
scripts/: hft-build  pre-commit  setup-dev-env.sh  setup_redis_cluster.sh
src/: auth_manager.cpp  backtest_runner.cpp  benchmark.cpp  concurrency_test.cpp  hft_engine.cpp  hft_single.cpp  integrated_pipeline.cpp  main.cpp  matching_engine.cpp  order_book.cpp  python_bindings.cpp  simple_demo.cpp  trading_client.cpp  ui_manager.cpp  websocket_client.cpp
src/analytics/: pnl_calculator.cpp  pnl_calculator_simple.cpp
src/backtesting/: tick_data_generator.cpp  tick_replay.cpp
src/engine/: hft_engine.cpp
src/fix/: fix_parser.cpp
src/matching/: matching_engine.cpp
src/order/: order.cpp  order_book.cpp  price_level.cpp
tests/: CMakeLists.txt  strategy_test.cpp  test_auth_manager.cpp  test_order_book.cpp  test_trading_client.cpp
tools/: strategy_demo.cpp
uml/: data_flow_diagram.mmd  sequence_diagram.mmd  use_case_diagram.mmd
uml/development/: component_diagram.mmd
uml/logical/: class_diagram.mmd  state_machine_diagram.mmd
uml/scenarios/: sequence_diagram.mmd
web/: index.html  server.py
