[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "pybind11>=2.6.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "hft-engine-cpp"
version = "2.0.0"
authors = [
    {name = "HFT Engine Team", email = "dev@hftengine.com"},
]
description = "High-performance, low-latency trading engine with Python bindings"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX", 
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["hft", "trading", "finance", "low-latency", "cpp", "python", "bindings"]
dependencies = [
    "pybind11>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-benchmark",
    "black",
    "isort",
    "mypy",
]
docs = [
    "sphinx>=4.0", 
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/RajaBabu15/hft_engine"
"Bug Tracker" = "https://github.com/RajaBabu15/hft_engine/issues"
Documentation = "https://hft-engine.readthedocs.io/"
"Source Code" = "https://github.com/RajaBabu15/hft_engine"

[tool.setuptools]
package-dir = {"" = "python"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["python"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true